// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldSelector should render successfully with no preselected fields 1`] = `
<div>
  <div
    class="Typography__Typography___1ZUfE"
    data-test-id="cf-ui-text-container"
  >
    <div
      class="css-1w2p18d"
    >
      <h2
        class="Subheading__Subheading___2mA9j f36-margin-bottom--m"
        data-test-id="cf-ui-subheading"
      >
        CT1
      </h2>
      <form
        class="Form__Form___2zwZf"
        data-test-id="cf-ui-form"
      >
        <div
          class="Form__Form__item___2qOZE Form__Form__item--default___1CHMK"
        >
          <div
            class="ControlledInputField__ControlledInputField___2uIG9"
            data-test-id="cf-ui-checkbox-field"
          >
            <div
              class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
            >
              <input
                aria-label="X"
                class="ControlledInput__ControlledInput___2XK3j"
                data-test-id="cf-ui-controlled-input"
                id="field-box-ct1-x"
                type="checkbox"
                value=""
              />
              <label
                class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
                for="field-box-ct1-x"
              >
                <svg
                  class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
                  data-test-id="cf-ui-icon"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                  />
                </svg>
              </label>
            </div>
            <div>
              <label
                class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
                data-test-id="cf-ui-form-label"
                for="field-box-ct1-x"
              >
                X
              </label>
              <p
                class="HelpText__HelpText___uWbja"
                data-test-id="cf-ui-help-text"
              >
                Field ID: x
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="css-1w2p18d"
    >
      <h2
        class="Subheading__Subheading___2mA9j f36-margin-bottom--m"
        data-test-id="cf-ui-subheading"
      >
        CT2
      </h2>
      <form
        class="Form__Form___2zwZf"
        data-test-id="cf-ui-form"
      />
    </div>
  </div>
</div>
`;

exports[`FieldSelector should render successfully with preselected fields 1`] = `
<div>
  <div
    class="Typography__Typography___1ZUfE"
    data-test-id="cf-ui-text-container"
  >
    <div
      class="css-1w2p18d"
    >
      <h2
        class="Subheading__Subheading___2mA9j f36-margin-bottom--m"
        data-test-id="cf-ui-subheading"
      >
        CT1
      </h2>
      <form
        class="Form__Form___2zwZf"
        data-test-id="cf-ui-form"
      >
        <div
          class="Form__Form__item___2qOZE Form__Form__item--default___1CHMK"
        >
          <div
            class="ControlledInputField__ControlledInputField___2uIG9"
            data-test-id="cf-ui-checkbox-field"
          >
            <div
              class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
            >
              <input
                aria-label="X"
                checked=""
                class="ControlledInput__ControlledInput___2XK3j"
                data-test-id="cf-ui-controlled-input"
                id="field-box-ct1-x"
                type="checkbox"
                value=""
              />
              <label
                class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
                for="field-box-ct1-x"
              >
                <svg
                  class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
                  data-test-id="cf-ui-icon"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                  />
                </svg>
              </label>
            </div>
            <div>
              <label
                class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
                data-test-id="cf-ui-form-label"
                for="field-box-ct1-x"
              >
                X
              </label>
              <p
                class="HelpText__HelpText___uWbja"
                data-test-id="cf-ui-help-text"
              >
                Field ID: x
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="css-1w2p18d"
    >
      <h2
        class="Subheading__Subheading___2mA9j f36-margin-bottom--m"
        data-test-id="cf-ui-subheading"
      >
        CT2
      </h2>
      <form
        class="Form__Form___2zwZf"
        data-test-id="cf-ui-form"
      />
    </div>
  </div>
</div>
`;
